--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,9 @@ php:
     - 5.5
     - 5.6
     - 7.0
+    - 7.1
     - nightly
     - hhvm
-
-addons:
-    apt:
-        packages:
-        - util-linux
 
 matrix:
     fast_finish: true
@@ -35,10 +31,12 @@ before_script:
     - rm -rf vendor/
     - rm composer.lock
     - composer self-update -n
+    - pecl install eio
     - composer install -n
 
 script:
     - vendor/bin/phpunit --coverage-clover clover.xml
+    - vendor/bin/phpcs
 
 after_success:
     - composer require --dev satooshi/php-coveralls
