--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require-dev": {
         "erebot/buildenv": "~1.2.0",
+        "squizlabs/php_codesniffer": ">=1.2.2",
         "phpunit/phpunit": "*"
     },
     "suggest": {
