--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ php:
     - 7.0
     - 7.1
     - nightly
-    - hhvm
 
 matrix:
     fast_finish: true
@@ -31,7 +30,7 @@ before_script:
     - rm -rf vendor/
     - rm composer.lock
     - composer self-update -n
-    - pecl install eio
+    - pecl install eio < /dev/null
     - composer install -n
 
 script:
