--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "erebot/plop": ">=0.6"
     },
     "require-dev": {
-        "erebot/buildenv": "~1.2.0",
+        "erebot/buildenv": "^1.4.0",
         "squizlabs/php_codesniffer": ">=1.2.2",
         "phpunit/phpunit": "*"
     },
